Duck no longer selects on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -35,3 +35,13 @@
     @apply bg-background bg-blue-400 text-foreground;
   }
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
